[package]
name = "unftp-sbe-rooter"
version = "0.2.0"
edition = "2021"
authors = ["Hannes de Jager <hannes.de.jager@gmail.com>"]
description = "A libunftp wrapper storage back-end that roots a user to a specific home directory."
repository = "https://github.com/hannesdejager/unftp-sbe-rooter"
homepage = "https://github.com/hannesdejager/unftp-sbe-rooter"
license = "Apache-2.0"
readme = "README.md"
keywords = ["libunftp", "unftp"]
categories = ["network-programming"]
documentation = "https://github.com/hannesdejager/unftp-sbe-rooter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
libunftp = "0.19.0"
tokio = { version = "1.32.0" }

[dev-dependencies]
pretty_assertions = "1.4.0"
unftp-sbe-fs = "0.2.3"
