[package]
name = "unftp-sbe-rooter"
version = "0.2.3"
edition = "2021"
authors = ["Hannes de Jager <hannes.de.jager@gmail.com>"]
description = "A libunftp wrapper storage back-end that roots a user to a specific home directory."
repository = "https://github.com/hannesdejager/unftp-sbe-rooter"
homepage = "https://github.com/hannesdejager/unftp-sbe-rooter"
license = "Apache-2.0"
readme = "README.md"
keywords = ["libunftp", "unftp"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-sbe-rooter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
libunftp = "0.22.0"
tokio = { version = "1.44.2" }

[dev-dependencies]
pretty_assertions = "1.4.1"
unftp-sbe-fs = "0.2.6"
